# nexus-twin

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/scripts/: seed.py
backend/src/: main.py
backend/src/agents/: __init__.py  base.py  factory_agent.py  master_agent.py  store_agent.py  truck_agent.py  warehouse_agent.py
backend/src/agents/prompts/: factory.md  store.md  truck.md  warehouse.md
backend/src/api/: dependencies.py  websocket.py
backend/src/api/models/: chaos.py  common.py  decisions.py  (+7 more)
backend/src/database/: seed.py  session.py
backend/src/enums/: __init__.py  agents.py  events.py  facilities.py  orders.py  routes.py  trucks.py
backend/src/guardrails/: __init__.py  base.py  factory.py  store.py  truck.py  warehouse.py
backend/src/observability/: __init__.py  langfuse.py
backend/src/repositories/: __init__.py  agent_decision.py  event.py  factory.py  material.py  order.py  route.py  store.py  truck.py  warehouse.py
backend/src/services/: __init__.py  chaos.py  decision_effect_processor.py  factory.py  material.py  order.py  physics.py  route.py  simulation.py  store.py  trigger_evaluation.py  truck.py  warehouse.py  world_state.py
backend/src/simulation/: chaos.py  engine.py  events.py  publisher.py
backend/src/tools/: __init__.py  route_risk.py  sales_history.py  stock_levels.py  weather.py
backend/src/workers/: celery_app.py
backend/src/world/: physics.py  state.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
(+263 files in other folders)
