[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-twin-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "openai>=1.30",
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "langchain-core>=0.2",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "celery[redis]",
    "redis>=5.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "langchain>=0.2",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "allow_random_breakdown: opt out of the autouse no_random_breakdown fixture",
]
